[package]
name = "ergothic"
version = "0.1.1"
authors = ["Cap. Hindsight <hindsight@yandex.ru>"]
description = "Rust library for setting up and running distributed Monte-Carlo statistical simulations. Designed primarily for lattice QCD."
homepage = "https://github.com/caphindsight/ergothic"
readme = "../README.md"
license = "WTFPL"

[dependencies]
argparse = "0.2.1"
bson = "0.10.0"
log = "0.4.3"
mongodb = "0.3.8"
prettytable-rs = "0.7.0"
rand = "0.5.3"
serde = "1.0.69"
serde_derive = "1.0.69"
simple_logger = "0.5.0"
structopt = "0.2.10"
